--- a/Focusing/app/src/main/res/values/strings.xml
+++ b/Focusing/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">MyFocus</string>
-    <string name="app_title">Focus</string>
+    <string name="app_title">F O C U S</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
@@ -19,13 +19,18 @@
 
     </string>
     <string name="intro_quote">
-        "More time, more productivity"
+        “You don’t have to be great to start, but you have to start to be great”
     </string>
+    <string name="data_usagethings">
+        Select one of the above to choose which app usage data you would like to view,
+        your daily usage or your weekly usage.
+    </string>
+
     <string name="help">Help</string>
     <string name="profile">Profile</string>
     <string name="title_activity_tab">TabActivity</string>
     <string name="section_format">Hello World from section: %1$d</string>
-    <string name="tab_name">FOCUS</string>
+    <string name="tab_name">F O C U S</string>
     <string name="title_activity_profile">ProfileActivity</string>
     <string name="title_activity_about_us">AboutUs</string>
     <string name="title_activity_help">Help</string>
